RESOLVED FIXED 97217
-webkit-clip-path is applied on elements that are not descendant of the container
https://bugs.webkit.org/show_bug.cgi?id=97217
Summary -webkit-clip-path is applied on elements that are not descendant of the conta...
Alexandru Chiculita
Reported 2012-09-20 08:09:09 PDT
The clip-path is not removed from the GraphicsContext when RenderLayer::paintLayerContents ends.
Attachments
Test case (663 bytes, text/html)
2012-09-20 08:15 PDT, Alexandru Chiculita
no flags
Patch V1 (4.51 KB, patch)
2012-09-21 02:18 PDT, Alexandru Chiculita
webkit.review.bot: commit-queue-
Patch V2 (38.59 KB, patch)
2012-09-21 04:36 PDT, Alexandru Chiculita
no flags
Alexandru Chiculita
Comment 1 2012-09-20 08:15:49 PDT
Created attachment 164922 [details] Test case
Alexandru Chiculita
Comment 2 2012-09-21 02:18:46 PDT
Created attachment 165087 [details] Patch V1
WebKit Review Bot
Comment 3 2012-09-21 03:06:05 PDT
Comment on attachment 165087 [details] Patch V1 Attachment 165087 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13953530 New failing tests: css3/masking/clip-path-circle-relative-overflow.html css3/masking/clip-path-circle-overflow.html
Alexandru Chiculita
Comment 4 2012-09-21 04:36:11 PDT
Created attachment 165117 [details] Patch V2
Dirk Schulze
Comment 5 2012-09-21 05:00:40 PDT
Comment on attachment 165117 [details] Patch V2 Great catch! LGTM. r=me.
WebKit Review Bot
Comment 6 2012-09-21 05:07:45 PDT
Comment on attachment 165117 [details] Patch V2 Clearing flags on attachment: 165117 Committed r129215: <http://trac.webkit.org/changeset/129215>
WebKit Review Bot
Comment 7 2012-09-21 05:07:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.